<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ParentFragment.TableFragment">

    <!-- TODO: Update blank fragment layout -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="583dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/c1"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/p1"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/p2"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/c2"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@color/grey"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/ansc1"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/ansp1"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/ansp2"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/ansc2"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/basicDatum"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/basick"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/basicI"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/basicdV"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/basicOhm"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/basicStd"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:background="@color/grey"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/ansbasicDatum"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/ansbasick"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/ansbasicI"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/ansbasicdV"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/ansbasicOhm"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/ansbasicStd"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </TableRow>


    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>