<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="583dp">

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/colonX"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/colonY"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/colonZ"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:background="@color/grey"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/colonX"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/colonY"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="10sp"
                android:text="@string/colonZ"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


        </TableRow>


        <Button
            android:id="@+id/buttonstart"
            android:layout_width="251dp"
            android:layout_height="85dp"
            android:background="@drawable/button"
            android:onClick="changeActivity"
            android:text="START"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.568"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.799" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>